--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -7,6 +7,7 @@
     gap: 1rem;
     background: #323841;
     color: #fff;
+    overflow-x: hidden;
 
     .divider {
         display: flex;
